# confidentail-quark-benchmart

./: .gitignore  .gitmodules  Cargo.toml  README.md  confidentail_quark.yaml  install_secrets.sh  kbs_https_clinet.rs  micro.yaml  mongodb.yaml  nginx_service.yaml  ngnix.yaml  perf-attestation-report-syscall.yaml  perf-syscall-interceptor.yaml  quark_pod.yaml  redis.yaml
k8s_files/: index_html_secret.yaml  nginx_config.yaml  secret_manager_certificate.yaml
secret/file_secrets/: 10  100  101  102  103  104  105  106  107  108  109  11  110  111  112  113  114  115  116  117  118  119  12  120  121  122  123  124  125  126  127  128  18  19  21  23  24  25  27  28  (+51 more)
secret/mongo/: policy  rootCaPem1  rootCaPem13  rootCaPem14  rootCaPem15  rootCaPem16  rootCaPem17  rootCaPem2  rootCaPem20  rootCaPem22  rootCaPem26  rootCaPem30  rootCaPem31  rootCaPem34  rootCaPem35  rootCaPem37  rootCaPem40  rootCaPem41  rootCaPem42  rootCaPem43  rootCaPem45  rootCaPem48  rootCaPem5  rootCaPem50  rootCaPem51  rootCaPem52  rootCaPem53  rootCaPem54  rootCaPem57  rootCaPem58  rootCaPem59  rootCaPem60  rootCaPem61  rootCaPem62  rootCaPem63  rootCaPem8  rootCaPem9
secret/mongo_resource/: envCmd  policy
secret/nginx/: envCmd  indexHtml  nginxConf  policy
secret/nginx_resource/: envCmd  indexHtml  nginxConf
src/: get_attestation_report_syscall_test.rs  kbs_https_clinet.rs  main.rs  micro_access_ram.rs  mircro_bench_software_manager.rs  my_loger.rs  nginx.rs  perf_kubectl.rs  redis.rs
