[package]
name = "confidentail-quark-benchmark"
version = "0.1.0"
authors = [
  "yaoxinjing <yaoxinjing517@gmail.com>",
]
publish = false
edition = "2021"
license = "Apache-2.0"

[features]
default = [ "kubederive", "ws", "latest", "runtime"]
kubederive = ["kube/derive"]
runtime = ["kube/runtime"]
ws = ["kube/ws"]
latest = ["k8s-openapi/v1_25"]

[dependencies]
futures = "0.3.17"
tracing = "0.1.36"
tracing-subscriber = "0.3.3"
anyhow = "1.0.44"
tokio = { version = "1.14.0", features = ["full"]} 
tokio-util = "0.7.0"
#kube = { version = "0.78.0"}
#k8s-openapi = { version = "0.17.0" }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
serde_yaml = "0.9.19"
kube = {version = "^0.82.2" , default-features = false, features = ["runtime", "derive", "admission", "client"]}
k8s-openapi = { version = "0.18.0" }